fix for flash overlap

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -356,4 +356,5 @@
     width: 600px;
     padding: 50px;
     font-size: x-large;
+    margin-top: 100px;
 }
